<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="#BC3636"
        android:fontFamily="@font/dash"
        android:textColor="@color/white"
        android:text="@string/contact_form"
        android:padding="10dp"
        android:textSize="70dp"
        android:layout_marginTop="100dp"
        android:textStyle="bold" />

    <EditText

        android:id="@+id/Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/enter_your_name"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="250dp"
        android:background="#d8f3dc"
        android:fontFamily="@font/times"
        android:padding="10dp"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <EditText

        android:id="@+id/email24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email_address"
        android:layout_below="@id/Name"
        android:background="#d8f3dc"
        android:fontFamily="@font/times"
        android:padding="10dp"
        android:textSize="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"/>




    <EditText
        android:id="@+id/subject"
        android:layout_below="@id/email24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/subject"
        android:background="#d8f3dc"
        android:fontFamily="@font/times"
        android:padding="10dp"
        android:textSize="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editTextMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/subject"
        android:inputType="textMultiLine"
        android:lines="6"
        android:gravity="top"
        android:hint="@string/enter_your_message"
        android:background="#d8f3dc"
        android:fontFamily="@font/times"
        android:padding="10dp"
        android:textSize="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextMessage"
        android:text="@string/submit"
        android:layout_marginTop="30dp"
        android:textSize="35dp"
        app:backgroundTint="#3772FF"
        />

</RelativeLayout>