<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mymail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="310dp"
        android:fontFamily="@font/times"
        android:gravity="center"
        android:text="@string/navjot_singh_nav88901_gmail_com"
        android:textColor="@color/white"
        android:textSize="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tradeeazy"
        android:layout_marginStart="40dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:text="@string/welcome_to_tradeeazy"
        android:textColor="@color/white"
        android:textSize="85dp"
        android:gravity="center"
        android:fontFamily="@font/dash">

    </TextView>


    <EditText

        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tradeeazy"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#fff490"
        android:drawableStart="@drawable/baseline_person_outline_24"
        android:drawablePadding="10dp"
        android:fontFamily="@font/times"
        android:hint="@string/email"
        android:padding="10dp"
        android:textSize="20dp" />

    <EditText

        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="#fff490"
        android:drawableStart="@drawable/password"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:padding="10dp"
        android:textSize="20dp"
        android:fontFamily="@font/times"
        android:inputType="textPassword"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:backgroundTint="#ffc614"
        android:fontFamily="@font/cooper"
        android:text="@string/login"
        android:textSize="30dp"
       />

    

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/others"
        android:layout_centerHorizontal="true"
        app:backgroundTint="#ffc614"
        android:fontFamily="@font/cooper"
        android:text="@string/register"
        android:textSize="29dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/others"
        android:text="@string/or_sign_in_with"
        android:layout_above="@id/loginicons"
        android:textSize="20dp"
        android:fontFamily="@font/cooper"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:layout_margin="10dp"/>

    <LinearLayout
        android:id="@+id/loginicons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_marginBottom="25dp">


        <ImageView

            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:id="@+id/g_btn"
            android:src="@drawable/google"/>

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:src="@drawable/facebook"
            android:id="@+id/fb_btn"
            />

    </LinearLayout>
</RelativeLayout>